Fixed the bug that allowed the costumer to order pizzas with lower value than 0

--- a/code/index.html
+++ b/code/index.html
@@ -11,6 +11,6 @@
     <h1>This is your Pizza Bot</h1>
     <p id="pizza-order"></p> 
   </div>
-  <script src="pizzabot.js"></script>
+  <script src="./pizzabot.js"></script>
   </body>
 </html>
